--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ip": "^1.1.5"
   }
 }
